# pytest-appium-test

./: .gitignore  GUIDE.py  Makefile  QUICK_REFERENCE.md  README.md  conftest.py  pyproject.toml  pytest.ini
chapters/chapter_6/: 1_first_script.py  2_run_calculator.py  __init__.py  ch6_7_basic_operations.py
config/: capabilities.py
tests/: 1_first_script.py  2_run_calculator.py
